@@ -4,7 +4,7 @@ from operator import itemgetter
 
 __author__ = "Ondrej Tuma (McBig) <mcbig@zeropage.cz>"
 __date__ = "14 Jul 2021"
-__version__ = "2.4.1.dev0"       # https://www.python.org/dev/peps/pep-0386/
+__version__ = "2.5.0.dev0"       # https://www.python.org/dev/peps/pep-0386/
 
 DECLINED = 0
 
